--- a/report.Rmd
+++ b/report.Rmd
@@ -47,6 +47,7 @@ random_numbers3_breaks <- as.numeric(
 
 #colors <- 1:4
 colors <- wesanderson::wes_palette("Zissou1", 4)
+kableExtra::kbl(1:3)
 
 point_color <- colors[random_numbers3_breaks]
 plot(
